# skylerkaufman-com

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  server.js  site-cosmic.css  styles.css  vercel.json  visuals.js
api/: auth-config.js  (+11 more)
fivb-pipeline/: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  dash_helpers.py  dbt_project.yml  pyproject.toml  requirements-cron.txt  run_fivb_dbt_elo_pipeline.py  run_fivb_vis_pipeline.py  run_fivb_vis_raw_ingestion.py  run_full_pipeline.py  streamlit_app.py  supabase_setup.sql
fivb-pipeline/.dbt/: profiles.yml
fivb-pipeline/api_examples/: GetBeachMatch.json  GetBeachMatchList.json  GetBeachOlympicSelectionRanking.json  GetBeachRound.json  GetBeachRoundList.json  GetBeachRoundRanking.json  GetBeachTeam.json  GetBeachTeamList.json  GetBeachTournament.json  GetBeachTournamentList.json  GetBeachTournamentRanking.json  GetBeachWorldTourRanking.json  GetEvent.json  GetEventList.json  GetPlayer.json  GetPlayerList.json  README.md  RESPONSE_DATA_QUALITY.md  VIS_BEACH_ENDPOINTS.md  manifest.json
fivb-pipeline/docs/: ELO_DIAGNOSTICS.md  ELO_MODEL_PLAN.md  VIS_FIELDS_RESEARCH.md
fivb-pipeline/etl/: config.py  db.py  libpq_url.py  load_raw.py  pipeline_env.py  vis_client.py  vw_statistics.py
fivb-pipeline/postgres/: restart_postgres.sh  setup.sh
fivb-pipeline/scripts/: demo_vw_statistics.py  elo_compute.py  explore_vis_api.py  raw_column_stats.py  run_pipeline.sh  run_vw_statistics.py
fivb-pipeline/webdocs/: README.md  __init__.py  requirements.txt  server.py
(+70 files in other folders)
